# src/schemas/openapi.json
@@ -182,6 +182,30 @@
           }
         }
       }
+    },
+    "/healthCheck": {
+      "get": {
+        "description": "Description here",
+        "operationId": "healthCheckDuplicate",
+        "tags": [
+          "health"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HealthStatusCheck"
+                }
+              }
+            }
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -273,7 +297,28 @@
           "timestamp": {
             "type": "integer",
             "description": "Number of milliseconds since Epoch time",
-            "example": 1688612539479
+            "example": 111111111
+          }
+        }
+      },
+      "HealthStatusCheck": {
+        "description": "Health check Duplicate status",
+        "type": "object",
+        "required": [
+          "status",
+          "timestamp"
+        ],
+        "properties": {
+          "status": {
+            "type": "string",
+            "enum": [
+              "SUCCESS"
+            ]
+          },
+          "timestamp": {
+            "type": "integer",
+            "description": "Number of milliseconds since Epoch time",
+            "example": 11111123
           }
         }
       }
