# src/types/health.ts
@@ -1,3 +1,5 @@
 import { components } from "../schemas";
 
 export type HealthResponseDto = components["schemas"]["HealthStatus"];
+export type HealthDuplicateResponseDto =
+  components["schemas"]["HealthStatusCheck"];
